add: contact feature
